--- a/styles/style.css
+++ b/styles/style.css
@@ -3,3 +3,104 @@
   box-sizing:border-box;  
 }
 
+body {
+  background-color: white;
+}
+
+
+/** Header **/
+
+/* Logo */
+
+header img {
+  display: flex;
+  justify-content: center;
+  width: 32%;
+  margin-left: 7em;
+  margin-top: 1em;
+}
+
+
+/* Icons */
+
+section ul {
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+}
+
+section ul img:nth-child(1) {
+  display: flex;
+  width: 9%;
+  margin-top: -7em;
+  margin-left: -1em;
+}
+
+section ul img:nth-child(2) {
+  display: flex;
+  width: 9%;
+  margin-top: -7em;
+  margin-right: -11em;
+}
+
+section ul img:nth-child(3) {
+  display: flex;
+  width: 9%;
+  margin-top: -7em;
+  margin-right: 1em;
+}
+
+
+/* Nav */
+
+nav ul {
+  display: flex;
+  gap: 3em;
+  overflow-x: auto;
+  list-style-type: none;
+}
+
+nav ul li {
+  flex-shrink: 0;
+  margin-left: -1em;
+  margin-right: 1em;
+}
+
+li a {
+  color: grey;
+  font-family: 'Cabin', sans-serif;
+  font-size: large;
+  text-decoration: none;
+}
+
+
+/** Main **/
+
+main section {
+  display: flex;
+}
+
+main section img:nth-child(1) {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
+
+
+/** Footer **/
+
+footer section {
+  display: flex;
+  justify-content: flex-end;
+  border: 1px solid transparent;
+  padding: 45%;
+  background-color: black;
+}
+
+footer section img{
+  display: flex;
+  justify-content: flex-start;
+  width: 400%;
+  margin-right: -2.5em;
+}
