--- a/styles/style.css
+++ b/styles/style.css
@@ -10,97 +10,113 @@ body {
 
 /** Header **/
 
-/* Logo */
+header section {
+	display: flex;
+	justify-content: space-between;
+  padding: 1em;
+  background-color: transparent;
+  position: sticky;
+  top: 0;
+}
 
-header img {
+header section img {
+  width: 1.5em;
+}
+
+.logo {
   display: flex;
   justify-content: center;
-  width: 32%;
-  margin-left: 7em;
-  margin-top: 1em;
+  margin-left: 3em;
+  width: 8em;
 }
 
-
-/* Icons */
-
-section ul {
+header section div {
   display: flex;
-  justify-content: space-between;
-  list-style-type: none;
+  gap: 1.5em;
 }
 
-section ul img:nth-child(1) {
-  display: flex;
-  width: 9%;
-  margin-top: -7em;
-  margin-left: -1em;
-}
-
-section ul img:nth-child(2) {
-  display: flex;
-  width: 9%;
-  margin-top: -7em;
-  margin-right: -11em;
-}
-
-section ul img:nth-child(3) {
-  display: flex;
-  width: 9%;
-  margin-top: -7em;
-  margin-right: 1em;
-}
-
-
-/* Nav */
-
-nav ul {
-  display: flex;
-  gap: 3em;
+header nav ul {
+	display: flex;
+	gap: 3em;
+	flex-wrap: nowrap;
+	list-style: none;
+	margin-top: 1em;
+  margin-bottom: 2em;
+	padding: 1em;
   overflow-x: auto;
-  list-style-type: none;
-}
-
-nav ul li {
   flex-shrink: 0;
-  margin-left: -1em;
-  margin-right: 1em;
 }
 
-li a {
-  color: grey;
+header nav ul li a {
+	white-space: nowrap;
+  color: silver;
   font-family: 'Cabin', sans-serif;
   font-size: large;
+  font-weight: bold;
   text-decoration: none;
 }
 
 
 /** Main **/
 
-main section {
+.row {
   display: flex;
+  flex-wrap: wrap;
+
 }
 
-main section img:nth-child(1) {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
+.first {
+  flex: 70%;
+  padding: 0em;
 }
+
+main div img {
+  width: 100%;
+  padding: 1em 0em 1em 0em;
+}
+
+@media  and (max-width: 700px) {
+  .row {
+    flex-direction: column;
+  }
+  
+}
+
+
 
 
 /** Footer **/
 
-footer section {
+footer {
   display: flex;
-  justify-content: flex-end;
-  border: 1px solid transparent;
-  padding: 45%;
-  background-color: black;
+  padding: 2em 2em;
+  background: black;
 }
 
-footer section img{
+footer section {
+  flex: 50%;
+  padding: 0.5em;
+}
+
+.logo2 {
   display: flex;
-  justify-content: flex-start;
-  width: 400%;
-  margin-right: -2.5em;
+  justify-content: center;
+  width: 10em;
+}
+
+footer section h1 {
+  color: white;
+  font-family: 'Cabin', sans-serif;
+  font-size: x-large;
+  font-weight: bold;
+}
+
+footer section ul li {
+  display: flex;
+  list-style-type: none;
+  color: whitesmoke;
+  font-family: 'Cabin', sans-serif;
+  font-size: large;
+  font-weight: bold;
+  text-decoration: none;
 }
