--- a/styles/style.css
+++ b/styles/style.css
@@ -210,29 +210,6 @@ main div {
   padding: 0em;
 }
 
-main div img {
-  width: 100%;
-  padding: 1em 0em 1em 0em;
-}
-
-.img2 {
-  width: 80%;
-}
-
-.img3 {
-  width: 80%;
-  margin: 0 0 0 5em;
-}
-
-.img6 {
-  width: 80%;
-}
-
-.img7 {
-  width: 80%;
-  margin: 0 0 0 5em;
-}
-
 main div p a:first-of-type {
   background-color: rgb(60, 60, 60);
   text-decoration: none;
@@ -248,6 +225,54 @@ main div p a:first-of-type {
 
 main div p a:hover {
   color: var(--clr-hover);
+}
+
+main div img {
+  width: 100%;
+  padding: 1em 0em 1em 0em;
+}
+
+.img2 {
+  width: 80%;
+}
+
+.img3 {
+  width: 80%;
+  margin: 0 0 0 5em;
+}
+
+.img4 {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+.img6 {
+  width: 80%;
+}
+
+.img7 {
+  width: 80%;
+  margin: 0 0 0 5em;
+}
+
+.img9 {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 80%;
+  margin: 1em 0 1em 0;
+}
+
+.img10 {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 80%;
+  margin: 1em 0 1em 5em;
+}
+
+main div figcaption {
+  font-family: var(--main-font);
 }
 
 @media screen and (min-width: 700px) {
